# flick

./: .gitignore  README.md  flick.spec  main.py  pyproject.toml
etc/: flick.toml
pytools/: test_docker_mirror.py
scripts/: autofix.sh  install.sh  package.sh
src/flick/cmd/: cli.py  serve.py
src/flick/common/: conf.py  context.py  log.py  logging.py  utils.py
src/flick/core/: container.py  exceptions.py  executor.py  node.py  pip.py
src/flick/plugin/: window.py
src/flick/router/: _argparser.py  auth.py  base.py  basehandler.py  docker.py  node.py  pip.py  sse.py  webrequest.py
src/flick/router/schemas/: docker.py
src/flick/service/: sse.py  task.py  webrequest.py
test/: get_docker_info.py  list_disks.py  list_net.py  test_async.py  test_confz.py  test_sse.py
